[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsmbrl"
version = "0.1.0"
dynamic = ["dependencies"]
description = "Time Series Foundation Models for Model-Based Reinforcement Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Abdelhakim Benechehab", email = "abdelhakim.benechehab@gmail.com"}
]
keywords = ["time-series", "forecasting", "reinforcement-learning", "mbrl", "chronos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "pre-commit",
    "ruff"
]

[project.scripts]
tsmbrl-inference = "tsmbrl.inference:main"

[project.urls]
Homepage = "https://github.com/tsmbrl/tsmbrl"
Documentation = "https://github.com/tsmbrl/tsmbrl#readme"
Repository = "https://github.com/tsmbrl/tsmbrl"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
